--- a/.project
+++ b/.project
@@ -7,6 +7,7 @@ Version=0.1.2
 Component=gb.image
 Component=gb.gtk3
 Component=gb.form
+Component=gb.settings
 Component=gb.media
 Component=gb.media.form
 Description="The game of Pong"
