--- a/.project
+++ b/.project
@@ -5,11 +5,9 @@ Startup=FMain
 Icon=icon1.png
 Version=0.2.0
 Component=gb.image
-Component=gb.gtk3
+Component=gb.qt4
 Component=gb.form
 Component=gb.settings
-Component=gb.media
-Component=gb.media.form
 Description="The game of Pong"
 Authors="Charlie Ogier 2017\nOn GitHub 02/07/2017"
 Environment="GB_GUI=gb.gtk"
